# stm32h5

./: Cargo.toml  Embed.toml  Makefile  report.md
src/: main.rs
